--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 you've probably already come face-to-face with your #1 
 enemy - "Time Wasting".</p> 
 
-<p>What you need to know is that "Time Is Money". <strong>And this 
+<p class="middle">What you need to know is that "Time Is Money". <strong>And this 
 applies <em>even more</em> to the online world</strong>, than in regular 
 business.</p> 
 
